--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
             font-weight: bold;
         }
 
-        /* Стиль для сообщения */
+        /* Стиль для товара */
         .message-container {
             display: flex;
             flex-direction: column;
@@ -130,21 +130,14 @@
 </head>
 <body>
 
-    <div class="message-container">
-        <h1>Ошибка!</h1>
-        <p>Сайт доступен только с Telegram</p>
-        <a href="https://t.me/JuniPit" class="telegram-button" target="_blank">
-            <span>Перейти в Telegram</span>
-        </a>
-
-    </div>
+    <div id="content"></div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
         let productsCache = []; // Кэш товаров
 
         document.addEventListener("DOMContentLoaded", () => {
-            // Убираем логику проверки на WebApp, теперь сайт всегда работает.
+            // Загружаем товары сразу
             initializeApp();
         });
 
