--- a/public/index.html
+++ b/public/index.html
@@ -145,6 +145,7 @@
             const tg = window.Telegram?.WebApp;
             if (tg) tg.expand();
             fetchProducts();
+            showContent(products);
         }
 
         function startAnimation() {
