--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,44 @@
             color: #4caf50;
             font-weight: bold;
         }
+
+        .review {
+    border-radius: 10px;
+    background: #1c2938;
+    padding: 15px;
+    margin: 15px 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease-in-out;
+}
+
+.review:hover {
+    transform: scale(1.02);
+}
+
+.review h2 {
+    margin: 0 0 10px;
+    font-size: 20px;
+    color: #4caf50;
+}
+
+.review p {
+    margin: 5px 0;
+    font-size: 14px;
+    color: #ccc;
+}
+
+.review a {
+    display: inline-block;
+    margin-top: 10px;
+    color: #007bff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.review a:hover {
+    text-decoration: underline;
+}
+
     </style>
 </head>
 <body>
