--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
 }
 
 .product .discount {
-    color: #ff5252;
+    color: #4fd749;
     font-weight: bold;
 }
 
@@ -264,7 +264,7 @@
                     <h2>${review.Name_prod}</h2>
                     <p><strong>Дата покупки:</strong> ${review.Date}</p>
                     <p><strong>Стоимость:</strong> ${review.cost} ₽</p>
-                    <p>${review.revie_text}</p>
+                    <p><strong>Комменарий:</strong> ${review.revie_text}</p>
                     <a href="${review.link}" target="_blank">Смотреть отзыв</a>
                 `;
                 reviewList.appendChild(reviewElement);
