--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 
         .container {
             padding: 20px;
+            padding-bottom: 60px; /* Отступ снизу, чтобы контент не перекрывался */
         }
 
         .bottom-nav {
