--- a/public/index.html
+++ b/public/index.html
@@ -179,7 +179,7 @@
 .product-details .price {
     font-size: 20px;
     font-weight: bold;
-    color: #ff5252;
+/*     color: #ff5252; */
 }
 
 .product-details button {
