--- a/public/index.html
+++ b/public/index.html
@@ -282,7 +282,7 @@
                 productElement.innerHTML = `
                     <img src="${product.image}" alt="${product.title}">
                     <h2>${product.title}</h2>
-                    <p>${product.description}</p>
+                    <p>${product.description1}</p>
                     <p><strong>Цена:</strong> ${product.discount_price} ₽ ${discount}</p>
                     <button onclick="showProductDetails(${JSON.stringify(product)})">Подробнее</button>
                 `;
