--- a/public/index.html
+++ b/public/index.html
@@ -300,11 +300,12 @@
                         ${product.discount_price < product.price ? 
                             `<span class="discount">-${Math.round((1 - product.discount_price / product.price) * 100)}%</span>` 
                             : ''}</p>
-                    <button onclick="buyProduct()">Купить</button>
+                    <button onclick="window.location.href='https://t.me/MaksikTuTaaa'">Купить</button>
                     <button onclick="showContent('products')">Назад</button>
                 </div>
             `;
         }
+
 
 
         function buyProduct() {
