--- a/public/index.html
+++ b/public/index.html
@@ -220,7 +220,7 @@
 
     <div class="bottom-nav">
         <button onclick="showContent('news')" id="btn-news">Новости</button>
-        <button onclick="showContent('products')" id="btn-products" class="active">Товары</button>
+        <button onclick="showContent('products')" id="btn-products">Товары</button>
         <button onclick="showContent('reviews')" id="btn-reviews">Отзывы</button>
     </div>
 
